Updated the report design (talaga ba?)

--- a/NEW PROJECT SIMS/Report1.rdlc
+++ b/NEW PROJECT SIMS/Report1.rdlc
@@ -6,13 +6,13 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>8.4604cm</Width>
+              <Width>6.17951cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>8.4604cm</Width>
+              <Width>6.17951cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>8.4604cm</Width>
+              <Width>6.17951cm</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -247,7 +247,7 @@
         <Top>1.36088cm</Top>
         <Left>1.11404cm</Left>
         <Height>7.55cm</Height>
-        <Width>25.3812cm</Width>
+        <Width>18.53853cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -258,13 +258,13 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>8.58233cm</Width>
+              <Width>7.04604cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>8.58233cm</Width>
+              <Width>7.04604cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>8.58233cm</Width>
+              <Width>7.04604cm</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -497,9 +497,9 @@
         </TablixRowHierarchy>
         <DataSetName>DataSet1</DataSetName>
         <Top>1.36088cm</Top>
-        <Left>26.49524cm</Left>
+        <Left>19.65257cm</Left>
         <Height>7.55cm</Height>
-        <Width>25.74699cm</Width>
+        <Width>21.13812cm</Width>
         <ZIndex>1</ZIndex>
         <Style>
           <Border>
@@ -511,13 +511,13 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>10.73439cm</Width>
+              <Width>7.89563cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>10.73439cm</Width>
+              <Width>7.89563cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>10.73439cm</Width>
+              <Width>7.89563cm</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -750,9 +750,9 @@
         </TablixRowHierarchy>
         <DataSetName>DataSet1</DataSetName>
         <Top>1.36088cm</Top>
-        <Left>52.2422cm</Left>
+        <Left>40.79069cm</Left>
         <Height>7.55cm</Height>
-        <Width>32.20317cm</Width>
+        <Width>23.68689cm</Width>
         <ZIndex>2</ZIndex>
         <Style>
           <Border>
@@ -764,13 +764,13 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>13.77076cm</Width>
+              <Width>11.08965cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>13.77076cm</Width>
+              <Width>11.08965cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>13.77076cm</Width>
+              <Width>11.08965cm</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -1003,9 +1003,9 @@
         </TablixRowHierarchy>
         <DataSetName>DataSet1</DataSetName>
         <Top>1.36088cm</Top>
-        <Left>84.44537cm</Left>
+        <Left>64.47758cm</Left>
         <Height>7.55cm</Height>
-        <Width>41.31228cm</Width>
+        <Width>33.26895cm</Width>
         <ZIndex>3</ZIndex>
         <Style>
           <Border>
@@ -1013,58 +1013,11 @@
           </Border>
         </Style>
       </Tablix>
-      <Textbox Name="Textbox8010">
-        <CanGrow>true</CanGrow>
-        <KeepTogether>true</KeepTogether>
-        <Paragraphs>
-          <Paragraph>
-            <TextRuns>
-              <TextRun>
-                <Value>Issued by:</Value>
-                <Style>
-                  <FontFamily>Segoe UI Variable Display Semib</FontFamily>
-                  <FontSize>60pt</FontSize>
-                  <FontWeight>SemiBold</FontWeight>
-                </Style>
-              </TextRun>
-            </TextRuns>
-            <Style />
-          </Paragraph>
-          <Paragraph>
-            <TextRuns>
-              <TextRun>
-                <Value />
-                <Style>
-                  <FontFamily>Segoe UI Variable Display Semib</FontFamily>
-                  <FontSize>60pt</FontSize>
-                  <FontWeight>SemiBold</FontWeight>
-                </Style>
-              </TextRun>
-            </TextRuns>
-            <Style />
-          </Paragraph>
-        </Paragraphs>
-        <rd:DefaultName>Textbox8008</rd:DefaultName>
-        <Top>32.75823cm</Top>
-        <Left>1.11404cm</Left>
-        <Height>3.19685cm</Height>
-        <Width>25.79989cm</Width>
-        <ZIndex>4</ZIndex>
-        <Style>
-          <Border>
-            <Style>None</Style>
-          </Border>
-          <PaddingLeft>2pt</PaddingLeft>
-          <PaddingRight>2pt</PaddingRight>
-          <PaddingTop>2pt</PaddingTop>
-          <PaddingBottom>2pt</PaddingBottom>
-        </Style>
-      </Textbox>
     </ReportItems>
-    <Height>16.54443in</Height>
+    <Height>14.54443in</Height>
     <Style />
   </Body>
-  <Width>49.69469in</Width>
+  <Width>99.10029cm</Width>
   <Page>
     <PageHeader>
       <Height>7.07111cm</Height>
@@ -1125,8 +1078,8 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox8008</rd:DefaultName>
-          <Top>1.91976cm</Top>
-          <Left>93.3029cm</Left>
+          <Top>2.23726cm</Top>
+          <Left>71.2025cm</Left>
           <Height>3.03695cm</Height>
           <Width>25.79989cm</Width>
           <ZIndex>1</ZIndex>
@@ -1161,8 +1114,8 @@
             </Paragraph>
           </Paragraphs>
           <rd:DefaultName>Textbox8008</rd:DefaultName>
-          <Top>1.91976cm</Top>
-          <Left>48.29129cm</Left>
+          <Top>2.23726cm</Top>
+          <Left>36.12046cm</Left>
           <Height>3.03695cm</Height>
           <Width>25.79989cm</Width>
           <ZIndex>2</ZIndex>
@@ -1183,8 +1136,18 @@
         </Border>
       </Style>
     </PageHeader>
-    <PageHeight>29.7cm</PageHeight>
-    <PageWidth>21cm</PageWidth>
+    <PageFooter>
+      <Height>0.02646cm</Height>
+      <PrintOnFirstPage>true</PrintOnFirstPage>
+      <PrintOnLastPage>true</PrintOnLastPage>
+      <Style>
+        <Border>
+          <Style>None</Style>
+        </Border>
+      </Style>
+    </PageFooter>
+    <PageHeight>21.59cm</PageHeight>
+    <PageWidth>35.56cm</PageWidth>
     <LeftMargin>2cm</LeftMargin>
     <RightMargin>2cm</RightMargin>
     <TopMargin>2cm</TopMargin>
